--- a/reaction_systems_gui/Cargo.toml
+++ b/reaction_systems_gui/Cargo.toml
@@ -14,25 +14,22 @@ serde = { version = "1", optional = true }
 colored = "*"
 lalrpop-util = "*"
 petgraph = ">=0.8"
-egui_node_graph2 = { path = "../egui_node_graph2" }
 petgraph-graphml = "*"
-getrandom = { version = "0.3" }
+egui_node_graph2 = { path = "../egui_node_graph2" }
+getrandom = "0.3" # dependency that has to be specified correctly for wasm
 layout-rs = "0.1"
-rfd = "*"
-ron = "*"
-# rsprocess = { version = "*", git = "https://tautocrono.it/elvis/ReactionSystems.git" }
-rsprocess = { version = "*", path = "../../ReactionSystems/rsprocess/" }
-assert = { version = "*", path = "../../ReactionSystems/assert/" }
-execution = { version = "*", path = "../../ReactionSystems/execution/" }
-bisimilarity = { version = "*", path = "../../ReactionSystems/bisimilarity/" }
-grammar_separated = { version = "*", path = "../../ReactionSystems/grammar_separated/" }
-
-
+rfd = "*" # for file selection
+ron = "*" # for serialization
+rsprocess = { version = "*", git = "https://tautocrono.it/elvis/ReactionSystems.git" }
+assert = { version = "*", git = "https://tautocrono.it/elvis/ReactionSystems.git" }
+execution = { version = "*", git = "https://tautocrono.it/elvis/ReactionSystems.git" }
+bisimilarity = { version = "*", git = "https://tautocrono.it/elvis/ReactionSystems.git" }
+grammar_separated = { version = "*", git = "https://tautocrono.it/elvis/ReactionSystems.git" }
 
 [target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "*"
-getrandom = { version = "0.3", features = ["wasm_js"]}
+getrandom = { version = "0.3", features = ["wasm_js"]} # dependency that has to be specified correctly for wasm
 
 [features]
 default = []
