--- a/reaction_systems_gui/Cargo.toml
+++ b/reaction_systems_gui/Cargo.toml
@@ -14,7 +14,7 @@ serde = { version = "1", optional = true }
 colored = "*"
 lalrpop-util = "*"
 petgraph = ">=0.8"
-nsvg = "0.5.1"
+resvg = "*"
 dyn-clone = "*"
 petgraph-graphml = "*"
 egui_node_graph2 = { path = "../egui_node_graph2" }
