--- a/reaction_systems_gui/Cargo.toml
+++ b/reaction_systems_gui/Cargo.toml
@@ -23,11 +23,11 @@ getrandom = "0.3" # dependency that has to be specified correctly for wasm
 layout-rs = "0.1"
 rfd = "*" # for file selection
 ron = "*" # for serialization
-rsprocess = { version = "*", git = "https://tautocrono.it/elvis/ReactionSystems.git" }
-assert = { version = "*", git = "https://tautocrono.it/elvis/ReactionSystems.git" }
-execution = { version = "*", git = "https://tautocrono.it/elvis/ReactionSystems.git" }
-bisimilarity = { version = "*", git = "https://tautocrono.it/elvis/ReactionSystems.git" }
-grammar_separated = { version = "*", git = "https://tautocrono.it/elvis/ReactionSystems.git" }
+rsprocess = { version = "*", git = "https://github.com/elvisrossi/ReactionSystems.git" }
+assert = { version = "*", git = "https://github.com/elvisrossi/ReactionSystems.git" }
+execution = { version = "*", git = "https://github.com/elvisrossi/ReactionSystems.git" }
+bisimilarity = { version = "*", git = "https://github.com/elvisrossi/ReactionSystems.git" }
+grammar_separated = { version = "*", git = "https://github.com/elvisrossi/ReactionSystems.git" }
 
 
 [target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
